# simplescript

./: .gitignore  Cargo.toml  README.md
src/: main.rs  runner.rs
src/ast/: datatype.rs  expression.rs  expression_builder.rs  function.rs  ifcondition.rs  insertvariable.rs  mod.rs  return_command.rs  root_scope.rs  scope.rs  setvariable.rs  statement.rs  variable.rs  whileloop.rs
src/ast/expressions/: array_expression.rs  binary_expression.rs  char_expression.rs  expression_cast_expression.rs  expression_statement.rs  float_expression.rs  function_call_expression.rs  integer_expression.rs  mod.rs  string_expression.rs  struct_expression.rs  unary_expression.rs  variable_extract_expression.rs  variable_named_extract_expression.rs  variable_read_expression.rs
src/lexing/: lexer.rs  mod.rs  token.rs
src/parsing/: data_type_parser.rs  expression_cast_parser.rs  expression_parser.rs  function_call_parser.rs  mod.rs  new_expression_parser.rs  parser.rs  scope_stack.rs  scope_stark.rs  sub_expression_parser.rs
test/: main.txt
